IE7 fixes, especially in the Resume.
* The fieldsets are not collapsible in IE7 any more. I've narrowed down the problem to an IE7 issue with running javascript that has been inserted via innerHTML. It's going to be too much work to make pieforms work around it for now, so sorry IE - you lose.
* IE doesn't seem to understand the meaning of 'float', so make a table have auto width instead of 95% so that a float doesn't affect the position of the table.

--- a/htdocs/theme/default/static/style/style.css
+++ b/htdocs/theme/default/static/style/style.css
@@ -1128,6 +1128,14 @@ fieldset.collapsed legend a {
     background: url(../images/icon_fieldset_left.gif) 2px center no-repeat;
 }
 
+#coverletter fieldset,
+#interests fieldset,
+#contactinformation fieldset,
+#personalinformation fieldset,
+{
+    border: 0;
+}
+
 .tags {
     font-size: 11px;
 }
