--- a/htdocs/theme/default/static/style/views.css
+++ b/htdocs/theme/default/static/style/views.css
@@ -24,7 +24,6 @@ div.editview {
 }
 #view table.filedata {
     margin-top: 1em;
-    width: 95%;
     border: none;
 }
 #view table.filedata th {
